the theme option now avalabled for site

--- a/koji/src/app/about-us-page/about-us-page.component.html
+++ b/koji/src/app/about-us-page/about-us-page.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" س dir="rtl">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" dir="rtl">
   <div class="container-fluid">
     
     <a class="navbar-brand" href="">
@@ -16,11 +16,11 @@
   <div class="row text-white" dir="rtl">
     <div class="col-lg-8">
       <div class="pt-5" dir="rtl">
-        <h1 class="display-3 h1 p-3 text-dark"> با کجی قرار گذاشتن خیلییییی راحته . . .</h1>
+        <h1 class="display-3 h1 p-3 text-dark"> با کُجی قرار گذاشتن خیلییییی راحته . . .</h1>
         <div class="line m-3"></div>
         <ul class="">
           <li class="h4 p-4">کجی به شما این امکان رو میده که به سادگی قرار هاتون رو مدیریت کنید.</li>
-          <li class="h4 p-4">شما تنها نیاز دارید که تو کجی عضو شوید و از خدمات این سایت به صورت راییگااان بهره ببرید.</li>
+          <li class="h4 p-4">شما تنها نیاز دارید که تو کجی <strong (click)="navigate('login')" class="text-dark h2">عضو شوید</strong> تا از خدمات این سایت به صورت رایگان بهره ببرید.</li>
         </ul>
       </div>
     </div>
@@ -28,7 +28,7 @@
       <div class="text-center pt-5">
         <img src="../../assets/callender.webp" alt="Image" style="width:280px; " class="text-white h3 rounded-pill">
         <div class="p-5">
-          <strong class="h1">کجی</strong>
+          <strong class="h1">کُجی</strong>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
       <div class="container text-center pt-5">
         <img src="../../assets/developers.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
         <div class="pb-5">
-          <strong class="h2 text-dark">متخصصین تیم کجی دائما درحال توسعه این پروژه هستند</strong>
+          <strong class="h2 text-dark">متخصصین تیم کجی آماده هستند تا این پروژه رو در سطح های بالاتر گسترش بدن</strong>
         </div>
       </div>
     </div>
