--- a/koji/src/app/user-page/body/group/group.component.scss
+++ b/koji/src/app/user-page/body/group/group.component.scss
@@ -43,7 +43,7 @@
     justify-content: center;
     flex-direction: column;
     right: 0;
-    top: -8px;
+    top: -12px;
     position: absolute;
 }
 .button-panle button{
@@ -54,4 +54,71 @@
     height: 50px;
     border-radius: 50px;
     position: relative;
+}
+
+
+
+.light{
+    .button-panle button{
+        background-color: rgb(189, 142, 142);
+        color: #000;
+        border-color: rgb(189, 142, 142);
+    }
+    .group{
+        box-shadow: 2px 2px 5px rgb(172, 172, 172) ,-2px -2px 5px rgb(172, 172, 172);
+        // background-color: rgba(63, 63, 63, 0.719);
+        background-color: rgba(207, 204, 204, 0.719);
+        color: #000;
+    }
+    .event{
+        
+        border-bottom: 2px solid rgb(27, 27, 27);
+    }
+    .event:hover{
+        background-color: rgba(224, 224, 224, 0.925);
+    }
+    .header{
+        border-bottom: 2px solid rgb(20, 20, 20);
+    }
+}
+.derakula{
+    .button-panle button{
+        background-color: rgb(9, 95, 110);
+        color: #ffffff;
+        border-color: rgb(9, 95, 110);
+    }
+    .group{
+        box-shadow: 2px 2px 5px rgb(172, 172, 172) ,-2px -2px 5px rgb(172, 172, 172);
+        background-color: rgba(88, 88, 88, 0.719);
+        color: #fff;
+    }
+    .event{
+        border-bottom: 2px solid gray;
+    }
+    .event:hover{
+        background-color: rgba(88, 88, 88, 0.877);
+    }
+    .header{
+        border-bottom: 2px solid darkgray;
+    }
+}
+.fantasy{
+    .button-panle button{
+        background-color: rgb(30, 162, 185);
+        color: black;
+        border-color: rgb(30, 162, 185);
+    }
+    .group{
+        background-color: rgba(172, 166, 209, 0.719);
+        color: #000;
+    }
+    .event{
+        border-bottom: 2px solid rgb(8, 8, 8);
+    }
+    .event:hover{
+        background-color: rgba(172, 166, 209, 0.918);
+    }
+    .header{
+        border-bottom: 2px solid rgb(7, 7, 7);
+    }
 }
