--- a/koji/src/app/login-page/login-page.component.html
+++ b/koji/src/app/login-page/login-page.component.html
@@ -6,33 +6,33 @@
                 <div>
                     <input class="text-center" type="text" placeholder="نام" name="nameU" id="nameU" [formControl]="nameU">  
                     <span [hidden]="nameU.valid || nameU.untouched" class="error"  dir="rtl">  
-                        <div [hidden]="!nameU.hasError('minlength')" class="pb-3">
+                        <div [hidden]="!nameU.hasError('minlength')">
                             نام شما نمیتواند کمتر از سه حرف باشد.  
                         </div>  
-                        <div [hidden]="!nameU.hasError('required')" class="pb-3">  
-                            این فیلد ظروری است.
+                        <div [hidden]="!nameU.hasError('required')">  
+                            این فیلد ضروری است.
                         </div>  
                     </span>  
                 </div>
                 <div>
                     <input class="text-center" type="email" placeholder="ایمیل" name="emailU" id="emailU" [formControl]="emailU">  
                     <span [hidden]="emailU.valid || emailU.untouched" class="error" dir="rtl">  
-                        <div [hidden]="!emailU.hasError('email')" class="pb-3">  
+                        <div [hidden]="!emailU.hasError('email')">  
                             ایمیل معتبر نمی باشد.
                         </div>
-                        <div [hidden]="!emailU.hasError('required')" class="pb-3">  
-                            این فیلد ظروری است.
+                        <div [hidden]="!emailU.hasError('required')">  
+                            این فیلد ضروری است.
                         </div>  
                     </span>  
                 </div>
                 <div>
                     <input class="text-center" type="password" placeholder="پسورد" name="passwordU" id="passwordU" [formControl]="passwordU">  
                     <span [hidden]="passwordU.valid || passwordU.untouched" class="error" dir="rtl">  
-                        <div [hidden]="!passwordU.hasError('minlength')" class="pb-3">  
+                        <div [hidden]="!passwordU.hasError('minlength')">  
                             پسورد نمیتواند کمتر از چهار حرف باشد.
                         </div>  
-                        <div [hidden]="!passwordU.hasError('required')" class="pb-3">  
-                            این فیلد ظروری است.
+                        <div [hidden]="!passwordU.hasError('required')">  
+                            این فیلد ضروری است.
                         </div>
                         <br>
                     </span>  
@@ -48,26 +48,26 @@
                 <div>
                     <input class="text-center" type="email" placeholder="ایمیل" name="emailI" id="emailI" [formControl]="emailI">
                     <span [hidden]="emailI.valid || emailI.untouched" class="error" dir="rtl">  
-                        <div [hidden]="!emailI.hasError('email')" class="pb-3">  
+                        <div [hidden]="!emailI.hasError('email')">  
                             ایمیل معتبر نمی باشد.
                         </div>
-                        <div [hidden]="!emailI.hasError('required')" class="pb-3">  
-                            این فیلد ظروری است.
+                        <div [hidden]="!emailI.hasError('required')">  
+                            این فیلد ضروری است.
                         </div>  
                     </span>  
                 </div>
                 <div>
                     <input class="text-center" type="password" placeholder="پسوورد" name="passwordI" id="passwordI" [formControl]="passwordI">  
                     <span [hidden]="passwordI.valid || passwordI.untouched" class="error" dir="rtl">  
-                        <div [hidden]="!passwordI.hasError('minlength')" class="pb-3">  
+                        <div [hidden]="!passwordI.hasError('minlength')">  
                             پسوورد نمیتواند کمتر از چهار حرف باشد.
                         </div>  
-                        <div [hidden]="!passwordI.hasError('required')" class="pb-3">  
-                            این فیلد ظروری است.
+                        <div [hidden]="!passwordI.hasError('required')">  
+                            این فیلد ضروری است.
                         </div>  
                     </span>  
                 </div>
-                <a href="/notFound">پسوردتان را فراموش کردید؟</a>
+                <p class="link" (click)="navigate('notFound')">پسوردتان را فراموش کردید؟</p>
                 <button type="submit" [disabled]="!signInForm.valid" class="submit" dir="rtl">ورود</button> 
                 <div *ngIf="isLoadingI" dir="rtl" class="pt-3">منتظر بمانید ...</div>
                 <br>
@@ -78,15 +78,15 @@
             <div class="overlay">
                 <div class="overlay-panel overlay-left" dir="rtl">
                     <h1>سلام دوست عزیز!</h1>
-                    <p>برای ساختن حساب شخصی در<strong> کجی</strong> اطلاعات خود را وارد کنید.</p>
-                    <p>از قبل حساب شخصی دارید؟</p>
-                    <button class="ghost" id="signIn" onclick="container.classList.remove('right-panel-active');">ورود</button>
+                    <p class="text-white">برای ساختن حساب شخصی در<strong> کجی</strong> اطلاعات خود را وارد کنید.</p>
+                    <p class="text-white">از قبل حساب شخصی دارید؟</p>
+                    <button class="ghost" id="signIn" onclick="container.classList.remove('right-panel-active');">وارد شوید</button>
                 </div>
                 <div class="overlay-panel overlay-right" dir="rtl">
                     <h1>خوش آمدید!</h1>
-                    <p>لطفا با وارد کردن اطلاعاتتان وارد حساب شخصیتان در <strong>کجی</strong> شوید.</p>
-                    <p>حساب شخصی در کجی ندارید؟</p>
-                    <button class="ghost" id="signUp" onclick="container.classList.add('right-panel-active');">ثبت نام</button>
+                    <p class="text-white">لطفا با وارد کردن اطلاعاتتان وارد حساب شخصیتان در <strong>کجی</strong> شوید.</p>
+                    <p class="text-white">حساب شخصی در کجی ندارید؟</p>
+                    <button class="ghost" id="signUp" onclick="container.classList.add('right-panel-active');">ثبت نام کنید</button>
                 </div>
             </div>
         </div>
