--- a/koji/src/app/login-page/login-page.component.scss
+++ b/koji/src/app/login-page/login-page.component.scss
@@ -30,13 +30,13 @@ p{
 span{
     font-size: 12px;
 }
-a{
+.link{
     color: #333;
     font-size: 14px;
     text-decoration: none;
     margin: 15px 0;
 }
-a:hover{
+.link:hover{
     color: rgb(66, 66, 255);
     // font-size: 15px;
 }
@@ -56,7 +56,8 @@ button:focus{
 }
 button.ghost{
     background-color: transparent;
-    border-color: #ffffff;
+    color: #ffffff;
+    border-color: #e7d5e4;
 }
 .error{
     color: red;
@@ -146,7 +147,7 @@ input{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
-    color: #ffffff;
+    color: rgb(54, 46, 46);
     position: relative;
     left: -100%;
     height: 100%;
