--- a/koji/src/app/user-page/body/body.component.html
+++ b/koji/src/app/user-page/body/body.component.html
@@ -1,5 +1,7 @@
-<div class="body-container">
-    <div class="body">
-        <router-outlet></router-outlet>
-     </div>
+<div [class]="userPageInformation.theme">
+    <div class="body-container">
+        <div class="body">
+            <router-outlet></router-outlet>
+         </div>
+    </div>
 </div>
