--- a/koji/src/app/user-page/body/body.component.scss
+++ b/koji/src/app/user-page/body/body.component.scss
@@ -7,5 +7,26 @@
 .body{  
     position: absolute;
     width: 100%; height: 100%;
-    background-color: rgb(99, 104, 119);
+}
+
+
+.defult{
+    .body{
+        background-color: rgb(99, 104, 119);
+    }
+}
+.light{
+    .body{
+        background-color: rgb(235, 235, 235);
+    }
+}
+.derakula{
+    .body{
+        background-color: rgb(34, 34, 34);
+    }
+}
+.fantasy{
+    .body{
+        background-color: rgb(173, 211, 241);
+    }
 }
