--- a/koji/src/app/user-page/body/create-event/create-event.component.scss
+++ b/koji/src/app/user-page/body/create-event/create-event.component.scss
@@ -36,13 +36,8 @@
 .btn-form{
     border-radius: 20px;
     border: none;
-    // background-color: #63b1ee;
     color: #ffffff;
-    font-size: 12px;
-    font-weight: bold;
     padding: 12px 45px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
     transition: transform 80ms ease-in;
 }
 .btn-form:active{
@@ -86,4 +81,56 @@ input,textarea{
     width: fit-content;
     margin: 2px;
     border-radius: 5px;
+}
+
+
+.light{
+    .header button,#timeType{
+        background-color: rgb(189, 142, 142);
+        color: #000;
+        border-color: rgb(189, 142, 142);
+    }
+    .create-event{
+        box-shadow: 2px 2px 5px rgb(172, 172, 172) ,-2px -2px 5px rgb(172, 172, 172);
+        // background-color: rgba(63, 63, 63, 0.719);
+        background-color: rgba(207, 204, 204, 0.719);
+        color: #000;
+    }
+
+    .header{
+        border-bottom: 2px solid rgb(20, 20, 20);
+    }
+}
+.derakula{
+    input,textarea{
+        background-color: rgb(37, 37, 37);
+        color: #fff;
+    }
+    .header button ,#timeType{
+        background-color: rgb(9, 95, 110);
+        color: #fff;
+        border-color: rgb(9, 95, 110);
+    }
+    .create-event{
+        box-shadow: 2px 2px 5px rgb(172, 172, 172) ,-2px -2px 5px rgb(172, 172, 172);
+        background-color: rgba(88, 88, 88, 0.719);
+        color: #fff;
+    }
+    .header{
+        border-bottom: 2px solid darkgray;
+    }
+}
+.fantasy{
+    .header button,#timeType{
+        background-color: rgb(30, 162, 185);
+        color: black;
+        border-color: rgb(30, 162, 185);
+    }
+    .create-event{
+        background-color: rgba(172, 166, 209, 0.719);
+        color: #000;
+    }
+    .header{
+        border-bottom: 2px solid rgb(7, 7, 7);
+    }
 }
