--- a/koji/src/app/user-page/body/event-setting/event-setting.component.html
+++ b/koji/src/app/user-page/body/event-setting/event-setting.component.html
@@ -1,9 +1,11 @@
-<div class="event-setting-container">
-    <div class="event-setting">
-        <div class="h2 text-right header" dir="rtl">
-            <button class="btn btn-back-container bg-dark text-white rounded-pill h6" (click)="back()">
-                <
-            </button>
+<div [class]="userPageInformation.theme">
+    <div class="event-setting-container">
+        <div class="event-setting">
+            <div class="h2 text-right header" dir="rtl">
+                <button class="btn btn-back-container btn-dark text-white rounded-pill h6" (click)="back()">
+                    <
+                </button>
+            </div>
         </div>
-    </div>
+    </div>    
 </div>
