--- a/koji/src/app/user-page/body/join-group/join-group.component.scss
+++ b/koji/src/app/user-page/body/join-group/join-group.component.scss
@@ -32,7 +32,8 @@
     position: absolute;
     right: 5px;
     top: 40px;
-}.body{
+}
+.body{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -72,4 +73,70 @@
     // left: -100px;
     width: 150px;
     height: 40px;
+}
+
+
+.defult{
+    .result{
+        background-color: rgb(19, 19, 19);
+        color: #fff;
+    }
+}
+.light{
+    .result{
+        background-color: white;
+        color: #000;
+    }
+     button{
+        background-color: rgb(189, 142, 142);
+        color: #000;
+        border-color: rgb(189, 142, 142);
+    }
+    .join-group{
+        box-shadow: 2px 2px 5px rgb(172, 172, 172) ,-2px -2px 5px rgb(172, 172, 172);
+        // background-color: rgba(63, 63, 63, 0.719);
+        background-color: rgba(207, 204, 204, 0.719);
+        color: #000;
+    }
+
+    .header{
+        border-bottom: 2px solid rgb(20, 20, 20);
+    }
+}
+.derakula{
+    .result{
+        background-color: rgb(19, 19, 19);
+        color: #fff;
+    }
+     button{
+        background-color: rgb(9, 95, 110);
+        color: #ffffff;
+        border-color: rgb(9, 95, 110);
+    }
+    .join-group{
+        box-shadow: 2px 2px 5px rgb(172, 172, 172) ,-2px -2px 5px rgb(172, 172, 172);
+        background-color: rgba(88, 88, 88, 0.719);
+        color: #fff;
+    }
+    .header{
+        border-bottom: 2px solid darkgray;
+    }
+}
+.fantasy{
+    .result{
+        background-color: rgb(211, 211, 211);
+        color: #000;
+    }
+     button{
+        background-color: rgb(30, 162, 185);
+        color: black;
+        border-color: rgb(30, 162, 185);
+    }
+    .join-group{
+        background-color: rgba(172, 166, 209, 0.719);
+        color: #000;
+    }
+    .header{
+        border-bottom: 2px solid rgb(7, 7, 7);
+    }
 }
